--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.14",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "tslint": "^6.1.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
