--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/lodash": "^4.14.168",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "ts-node": "^9.1.1",
